syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package service;

option go_package="github.com/pydio/cells/v4/common/proto/service";

enum OperationType {
    OR = 0;
    AND = 1;
}

enum ResourcePolicyAction {
    ANY = 0;
    OWNER = 1;
    READ = 2;
    WRITE = 3;
    EDIT_RULES = 4;
}

message Query {
    repeated google.protobuf.Any SubQueries = 1;
    OperationType Operation = 2;
    ResourcePolicyQuery ResourcePolicyQuery = 3;
    int64 Offset = 4;
    int64 Limit = 5;
    int32 groupBy = 6;
}

message ResourcePolicyQuery {
    repeated string Subjects = 1;
    bool Empty = 2;
    bool Any = 3;
}

message ResourcePolicy {
    int64 id = 1;
    string Resource = 2;
    ResourcePolicyAction Action = 3;
    string Subject = 4;
    enum PolicyEffect {
        deny = 0;
        allow = 1;
    }
    PolicyEffect Effect = 5;
    string JsonConditions = 6;
}

message StopEvent {
    string ServiceName = 1;
}

service Starter {
    rpc Start(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Service {
    rpc Status(google.protobuf.Empty) returns (StatusResponse);
}

message StatusResponse {
    bool OK = 1;
    string Address = 2;
}

service Archiver {
    rpc Archive(Query) returns (StatusResponse);
}

// TODO - move from there
message ChangesArchiveQuery {
    uint64 RemainingRows = 1;
}
